--- a/PruebaGit/res/values/strings.xml
+++ b/PruebaGit/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">PruebaGit</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_prueba">PruebaActivity</string>
 
 </resources>
